welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:2: error: not found: value int
  int l = nums.lenght
  ^arrayFront9:3: error: not found: value l
  if(l<4){
     ^arrayFront9:4: error: not found: value l
    l=4
    ^arrayFront9:6: error: not found: value T
  for (i <- 0 to T){
                 ^