welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
  int T = nums.lenght
  if(T<4){
    T=4
  }
  for (i <- 0 to T){
    if (nums(i)==9)
      return true
    }
    return false
  }
